Create gh-pages branch via GitHub

--- a/index.html
+++ b/index.html
@@ -40,6 +40,8 @@
 <a id="apps" class="anchor" href="#apps" aria-hidden="true"><span class="octicon octicon-link"></span></a>apps</h1>
 
 <p>中科企创苹果安装</p>
+
+<p><img src="https://github.com/chinazk/apps/blob/master/logo.png" width="100" height="100"><br>安装</p>
         </article>
       </div>
     </div>
